{
  "version": 4,
  "terraform_version": "1.13.2",
  "serial": 10,
  "lineage": "e197df26-61a5-f439-695a-056e6b195506",
  "resources": [
    {
      "module": "module.azurerm_pip[\"pip2\"]",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "todo_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/e380da56-8740-4356-9586-404bb3df34c7/resourceGroups/dev-rg12/providers/Microsoft.Network/publicIPAddresses/backendpip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.198.0.77",
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "backendpip",
            "resource_group_name": "dev-rg12",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.rg.azurerm_resource_group.rg_todo"
          ]
        }
      ]
    },
    {
      "module": "module.nsg[\"nsg1\"]",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "todo_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e380da56-8740-4356-9586-404bb3df34c7/resourceGroups/dev-rg11/providers/Microsoft.Network/networkSecurityGroups/dev-nsg",
            "location": "centralindia",
            "name": "dev-nsg",
            "resource_group_name": "dev-rg11",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "test123",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "dev-nsg",
            "resource_group_name": "dev-rg11",
            "subscription_id": "e380da56-8740-4356-9586-404bb3df34c7"
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.rg_todo"
          ]
        }
      ]
    },
    {
      "module": "module.nsg[\"nsg2\"]",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "todo_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e380da56-8740-4356-9586-404bb3df34c7/resourceGroups/dev-rg12/providers/Microsoft.Network/networkSecurityGroups/dev-nsg1",
            "location": "centralindia",
            "name": "dev-nsg1",
            "resource_group_name": "dev-rg12",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "test123",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "dev-nsg1",
            "resource_group_name": "dev-rg12",
            "subscription_id": "e380da56-8740-4356-9586-404bb3df34c7"
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.rg_todo"
          ]
        }
      ]
    },
    {
      "module": "module.subnet[\"subnet1\"]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "todo_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/e380da56-8740-4356-9586-404bb3df34c7/resourceGroups/dev-rg11/providers/Microsoft.Network/virtualNetworks/dev-vnet11/subnets/dev-subnet11",
            "name": "dev-subnet11",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "dev-rg11",
            "virtual_network_name": "dev-vnet11"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "dev-subnet11",
            "resource_group_name": "dev-rg11",
            "subscription_id": "e380da56-8740-4356-9586-404bb3df34c7",
            "virtual_network_name": "dev-vnet11"
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.rg_todo",
            "module.vnet.azurerm_virtual_network.todo_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnet[\"vnet1\"]",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "todo_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "7301b4ca-53d0-4d9a-be4b-34d5c1ebf5cb",
            "id": "/subscriptions/e380da56-8740-4356-9586-404bb3df34c7/resourceGroups/dev-rg11/providers/Microsoft.Network/virtualNetworks/dev-vnet11",
            "location": "centralindia",
            "name": "dev-vnet11",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "dev-rg11"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "dev-vnet11",
            "resource_group_name": "dev-rg11",
            "subscription_id": "e380da56-8740-4356-9586-404bb3df34c7"
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.rg_todo"
          ]
        }
      ]
    },
    {
      "module": "module.vnet[\"vnet2\"]",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "todo_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "3244f53c-b306-4f23-ab80-1ef19a874dc7",
            "id": "/subscriptions/e380da56-8740-4356-9586-404bb3df34c7/resourceGroups/dev-rg12/providers/Microsoft.Network/virtualNetworks/dev-vnet12",
            "location": "centralindia",
            "name": "dev-vnet12",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "dev-rg12"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "dev-vnet12",
            "resource_group_name": "dev-rg12",
            "subscription_id": "e380da56-8740-4356-9586-404bb3df34c7"
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.rg_todo"
          ]
        }
      ]
    }
  ]
}